# example-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cliff.toml  pyproject.toml  uv.toml.example
.woodpecker/: build.yaml
app/: global_conf.py  main.py
app/v1/auth_demo/: conf.py  operations.py  routes.py  schemas.py
app/v1/chat/: conf.py
app/v1/dns/: operation_dns.py  routes.py  schemas.py
app/v1/haproxy/: conf.py  routes.py
tests/: conftest.py
tests/v1/auth_demo/: conftest.py  test_auth_demo_routes.py
tests/v1/dns/: conftest.py  test_dns_routes.py  test_dns_schema.py
tests/v1/dns_config/: test_provider_template.py
