[project]
name = "example-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12",
    "fastapi>=0.115.6",
    "httpx>=0.27.2",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.7",
    "pydantic>=2.0.0",
    "pyjwt>=2.8",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "starlette>=0.41.3",
    "starlette-exporter>=0.21.0",
    "tashtiot-apis-library>=1.1.0",
    "uvicorn>=0.22.0",
]

[tool.uv]
package = false
# NOTE: index-strategy lives in uv.toml, not here — when a uv.toml exists it takes
# precedence and this section's uv settings are ignored. See uv.toml / README.

# The published PyPI build (0.1.0) lags the library and is missing
# fastapi_template.config_api. Resolve from the local source checkout instead.
[tool.uv.sources]
tashtiot-apis-library = { path = "../apis-library", editable = true }

[dependency-groups]
# Ranges, not exact pins: the exact versions (pytest==7.4.3, …) aren't published on
# the internal Artifactory mirror, which made `uv sync` unsatisfiable. uv.lock still
# pins the resolved versions for reproducibility.
dev = [
    "coverage>=7.5.2",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.6",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]